# project74821

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0fd99b964855_initial.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: __init__.py  auth.py  companies.py  health.py
apps/backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py  rate_limit.py  security.py
apps/backend/app/models/: __init__.py  ai_advice.py  base.py  cohort.py  company.py  company_metric.py  plan.py  plan_adjustment.py  plan_target.py  refresh_token.py  task.py  user.py
apps/backend/app/schemas/: __init__.py  ai_advice.py  auth.py  cohort.py  company.py  metric.py  plan.py  task.py  user.py
apps/backend/app/services/: auth_service.py  company_service.py
apps/backend/scripts/: migrate_v1_to_v2.py
apps/backend/tests/: conftest.py  helpers.py  run_tests.py  test_auth.py  test_companies.py  test_health.py
apps/frontend/: .dockerignore  .gitignore  Dockerfile  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/(auth)/login/: page.tsx
apps/frontend/src/app/(auth)/register/: page.tsx
apps/frontend/src/app/(dashboard)/dashboard/: page.tsx
docs/: PLAN.md  architecture.md
